--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "postcss css/styles.css -o src/styles.css"
+    "build": "postcss css/styles.css -o src/css/styles.css"
   },
   "keywords": [],
   "author": "",
